Fix buttons on smaller screens

--- a/resources/web/common/style.css
+++ b/resources/web/common/style.css
@@ -227,7 +227,7 @@ ul li {
 		float:initial;
 	}
 	
-	.navbar .right a {
+	.navbar .right a, .navbar .right a:link, .navbar .right a:visited {
 		padding:0px 12px 12px 0px;
 	}
 	
